# mobile_manipulator

./: .gitignore
robot_models/dh_ag95_gripper_ros2-humble/: instructions.odt
robot_models/scout_ros2/src/config/: diff_drive_controller.yaml
robot_models/scout_ros2/src/scout_base/: CMakeLists.txt  package.xml
robot_models/scout_ros2/src/scout_bringup/: package.xml
robot_models/scout_ros2/src/scout_controller/: CMakeLists.txt  package.xml
robot_models/scout_ros2/src/scout_description/: CMakeLists.txt  instruction.odt  package.xml
robot_models/scout_ros2/src/scout_description/launch/: scout_base.launch.py  scout_full.launch.py
robot_models/scout_ros2/src/scout_description/rviz/: display.rviz
robot_models/scout_ros2/src/scout_description/urdf/: scout_base.xacro  scout_full.xacro  scout_xarm_base.urdf  scout_xarm_base.xacro
robot_models/scout_ros2/src/scout_gazebo/: CMakeLists.txt  instructions.odt  package.xml  scout_gazebo-instruction.odt
robot_models/scout_ros2/src/scout_gazebo/gazebo_urdf/: scout_base_gazebo.xacro  scout_full_gazebo.xacro  scout_transmissions.xacro  scout_wheel_type1_gazebo.xacro  scout_wheel_type2_gazebo.xacro
robot_models/scout_ros2/src/scout_gazebo/launch/: scout_base_gazebo.launch.py  scout_full_gazebo.launch.py
robot_models/scout_ros2/src/scout_gazebo/worlds/: empty.world
robot_models/scout_ros2/src/scout_msgs/: CMakeLists.txt  package.xml
robot_models/scout_ros2/src/scout_navigation/: CMakeLists.txt  package.xml
