<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation support for Scout mobile base</description>

  <maintainer email="olipravin18@gmail.com">Pravin</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>scout_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

